# experiment-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: bundle.py  config.py  db.py  dependencies.py  embeddings.py  errors.py  ingest.py  links.py  main.py  models.py  parser.py  render.py  repository.py  rules.py  security.py  services.py  webhook.py
app/routers/: concepts.py  graph.py  ingest.py  search.py  ui.py  validate.py  webhooks.py
app/templates/: base.html  concept.html  concept_rows.html  graph.html  list.html
initdb/: 01-create-test-db.sql
tests/: conftest.py  test_harness.py
tests/api/: test_auth.py  test_concepts_crud.py  test_concepts_list.py  test_graph.py  test_ingest.py  test_links.py  test_search.py  test_semantic.py  test_ui.py  test_validate.py  test_webhook.py
tests/repo/: test_concept_repository.py  test_edge_repository.py  test_search_repository.py
tests/unit/: test_config.py  test_embeddings_real.py  test_links.py  test_parser.py  test_rules.py
