[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-knowledge-catalog"
version = "0.1.0"
description = "Knowledge Catalog API Service for OKF (Open Knowledge Format) bundles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "python-frontmatter>=1.1",
    "markdown-it-py>=3",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "pytest-cov>=5",
    "ruff>=0.6",
    "black>=24",
    "mypy>=1.11",
]
# Semantic search (Phase D). Heavy (pulls torch) so kept optional and lazily imported.
# Install with:  pip install -e ".[semantic]"   and set EMBEDDINGS_ENABLED=true
semantic = ["sentence-transformers>=3"]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
